remove index.html from links in test page, update test site url and expected crawl URLs

--- a/packages/e2e-test-site/site-content/index.html
+++ b/packages/e2e-test-site/site-content/index.html
@@ -12,8 +12,8 @@ Licensed under the MIT License.
     <body>
         <h1>Links</h1>
         <ul>
-            <li><a href="linked1/index.html">Link 1</a></li>
-            <li><a href="linked2/index.html">Link 2</a></li>
+            <li><a href="linked1/">Link 1</a></li>
+            <li><a href="linked2/">Link 2</a></li>
         </ul>
 
         <h1>Input radio - Native Widgets</h1>
