--- a/packages/e2e-test-site/site-content/linked1/index.html
+++ b/packages/e2e-test-site/site-content/linked1/index.html
@@ -9,7 +9,7 @@ Licensed under the MIT License.
     <body>
         <main>
             <h1>Linked page with inner page</h1>
-            <p><a href="../index.html">Back to home</a></p>
+            <p><a href="../">Back to home</a></p>
             <p><a href="inner-page.html">To inner page</a></p>
         </main>
     </body>
