--- a/packages/e2e-test-site/site-content/unlinked/other.html
+++ b/packages/e2e-test-site/site-content/unlinked/other.html
@@ -9,7 +9,7 @@ Licensed under the MIT License.
     <body>
         <main>
             <h1>Other page</h1>
-            <a href="./index.html">Back to unlinked page</a>
+            <a href="./">Back to unlinked page</a>
         </main>
     </body>
 </html>
