--- a/packages/e2e-test-site/site-content/linked2/index.html
+++ b/packages/e2e-test-site/site-content/linked2/index.html
@@ -9,7 +9,7 @@ Licensed under the MIT License.
     <body>
         <main>
             <h1>Linked page without inner page</h1>
-            <a href="../index.html">Back to home</a>
+            <a href="../">Back to home</a>
         </main>
     </body>
 </html>
