--- a/packages/e2e-test-site/site-content/linked1/inner-page.html
+++ b/packages/e2e-test-site/site-content/linked1/inner-page.html
@@ -2,13 +2,14 @@
 Copyright (c) Microsoft Corporation. All rights reserved.
 Licensed under the MIT License.
 -->
-<html lang="en">
+<html>
     <head>
         <title>Inner page</title>
     </head>
     <body>
         <main>
-            <h1>Inner page</h1>
+            <h1>Inner page with issues</h1>
+            <img id="non-decorative" src="./img1.png" />
             <a href="../">Back to home</a>
         </main>
     </body>
